--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<html>
-  <head>
-    <title>Afzal Ansari</title>
-  </head>
-  <body>
-    <H1>LOL</H1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Afzal Ansari</title>
+</head>
+<body>
+  <h1>LOL</h1>
+</body>
 </html>
