--- a/asdf/sj.html
+++ b/asdf/sj.html
@@ -9,15 +9,15 @@
 
 <body>
     <p><strong>Privacy Policy</strong></p>
-    <p>Last updated: August 18, 2024
+    <p>Last updated: August 18, 2024<br />
         This Privacy Policy describes Our policies and procedures onthe collection, use and
-        disclosure of Your information when You use the Serviceand tells You about Your privacy
+        disclosure of Your information when You use the Service and tells You about Your privacy
         rights and how the law protects You.</p>
     <p><strong>Interpretation and Definitions</strong></p>
     <p><strong>Interpretation</strong></p>
-    <p>The words of which the initial letter is capitalized havemeanings defined under the
-        following conditions. The following definitionsshall have the same meaning regardless of
-        whether they appear in singular or inplural.</p>
+    <p>The words of which the initial letter is capitalized have meanings defined under the
+        following conditions. The following definitions shall have the same meaning regardless of
+        whether they appear in singular or in plural.</p>
     <p><strong>Definitions</strong></p>
     <p>For the purposes of this Privacy Policy:</p>
     <ul>
@@ -77,21 +77,21 @@
         apps are saved in your Device and limited to You,thus the data is not transferred off your
         Device to the Company or any thirdparty.
         <strong>Security of Your Personal Data</strong>
-        The security of Your Personal Data is important to Us, Oncethe Application is deleted the
-        data will no longer be available in Device or Youcan update/delete the data yourself in the
+        The security of Your Personal Data is important to Us, Once the Application is deleted the
+        data will no longer be available in Device or You can update/delete the data yourself in the
         Application.
     </p>
     <p><strong>Children&#39;s Privacy</strong></p>
     <p>Since the Data is not transmitted off the Device,the Application assures Children’s Privacy.</p>
     <p><strong>Changes to this Privacy</strong></p>
-    <p>We may update Our Privacy Policy from time to time. We willnotify You of any changes by
+    <p>We may update Our Privacy Policy from time to time. We will notify You of any changes by
         posting the new Privacy Policy on this page.
         We will let You know via a prominent notice on Our Service,prior to the change becoming
         effective and update the &quot;Last updated&quot;date at the top of this Privacy Policy.
-        You are advised to review this Privacy Policy periodicallyfor any changes. Changes to this
-        Privacy Policy are effective when they areposted on this page.</p>
+        You are advised to review this Privacy Policy periodically for any changes. Changes to this
+        Privacy Policy are effective when they are posted on this page.</p>
     <p><strong>Contact Us</strong></p>
-    <p>If you have any questions about this Privacy Policy, You cancontact us:</p>
+    <p>If you have any questions about this Privacy Policy, You can contact us:</p>
     <ul>
         <li>By email: dev.afzalansari@gmail.com</li>
     </ul>
