--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Afzal Ansari</title>
   </head>
   <body>
-    <div id="root">404</div>
+    <div id="root">hash</div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
