--- a/src/projects/basket-rush/index.html
+++ b/src/projects/basket-rush/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting</title>
+    <title>Afzal Ansari | Projects</title>
 </head>
 <body>
-    
+    <h1>Basket Rush</h1>
+    <a href="/projects/basket-rush/privacy-policy.html">Privacy Policy</a>
 </body>
 </html>
