Switch to React Vite, seems it will work

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Afzal Ansari</title>
   </head>
   <body>
-    <div id="app"></div>
-    <a href="/projects/index.html">Projects</a>
+    <div id="root">hash</div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
