--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Afzal Ansari</title>
   </head>
   <body>
-    <div id="root">hash</div>
+    <div id="root">
+      <div class="w-screen h-screen flex justify-center items-center">
+        <h1 class="font-inter font-bold">PORTFÓLIO DE UM DESENVOLVEDOR</h1>
+      </div>
+    </div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
